Closed Bug 1585920 Opened 5 years ago Closed 5 years ago

network ID: fix VPN detection on Linux for non ethernet devices

Categories

(Core :: Networking, defect, P1)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: michal, Assigned: michal)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

If the traffic is routed through a non ethernet device we shouldn't return early at https://searchfox.org/mozilla-central/rev/35cc00a25c4471993fdaa5761952bd3afd4f1731/netwerk/system/netlink/NetlinkService.cpp#1388. We should check the link type and do a different calculations for ethernet and non ethernet devices.

In case of non ethernet device we can never get a MAC address of the next hop, so skip MAC lookup and proceed directly to network ID calculation based on device name and IP/network address.

Group: mozilla-employee-confidential
Pushed by mnovotny@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a1483108dc8f
network ID: fix VPN detection on Linux for non ethernet devices, r=valentin
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Regressions: 1590250
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: