Bug 1585920 - network ID: fix VPN detection on Linux for non ethernet devices, r=valentin

In case of non ethernet device we can never get a MAC address of the next hop, so skip MAC lookup and proceed directly to network ID calculation based on device name and IP/network address.

Differential Revision: https://phabricator.services.mozilla.com/D48049